[package]
name = "fs-set-times"
version = "0.18.0-rc0"
authors = ["Dan Gohman <dev@sunfishcode.online>"]
description = "Set filesystem timestamps"
documentation = "https://docs.rs/fs-set-times"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
repository = "https://github.com/bytecodealliance/fs-set-times"
edition = "2018"
keywords = ["api", "file"]
categories = ["filesystem"]
exclude = ["/.github"]

[dependencies]
io-lifetimes = { version = "1.0.0-rc1", default-features = false }

[target.'cfg(not(windows))'.dependencies]
rustix = { version = "0.36.0-rc1", features = ["fs", "time"] }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.36.0"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
]
